--- a/index.html
+++ b/index.html
@@ -1,144 +1,267 @@
-<!DOCTYPE html>
-<html lang="vi" dir="ltr" itemscope itemtype="https://schema.org/ShortStory">
+<!doctype html>
+<html lang="vi" dir="ltr">
   <head>
-    <title>Trò chơi shogi của quỷ</title>
+    <title>Chuyện Ma về Nàng Cờ Ma Yêu</title>
 
     <meta charset="UTF-8">
+
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; style-src 'self' 'unsafe-inline'">
+
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <meta name="description" content="Dưới ánh trăng, yêu quái Komayō dụ dỗ người chơi ōgi, hút cạn tinh túy của họ và khiến họ trở thành yūrei, khao khát được gặp lại cô.">
-    <meta name="keywords" content="câu chuyện, ma, Komayō, obake, ōgi, shōgi, yōkai, yūrei">
-    <meta name="robots" content="index, follow">
+    <meta name="description" content="Một câu chuyện ma Nhật Bản kể về Cờ Ma Yêu, một yōkai chuyên dụ dỗ các kỳ thủ chơi cờ vương vào ban đêm, trước khi biến họ thành những oan hồn.">
+    <meta name="keywords" content="Cờ Ma Yêu, yōkai, yūrei, Cờ vương Nhật Bản, kaidan, văn hóa dân gian Nhật Bản, chuyện ma, trò chơi truyền thống, kimono, quyến rũ ma quái">
+    <meta name="robots" content="index,follow">
     <meta name="author" content="Cyril Veltin">
-    <meta property="og:title" content="Trò chơi shogi của quỷ">
-    <meta property="og:type" content="book">
+    <meta name="copyright" content="Cyril Veltin 2023">
+
+    <meta property="og:site_name" content="Cờ Ma Yêu">
+    <meta property="og:locale" content="vi_VN">
+    <meta property="og:title" content="Chuyện Ma về Nàng Cờ Ma Yêu">
+    <meta property="og:description" content="Một câu chuyện ma Nhật Bản kể về Cờ Ma Yêu, một yōkai chuyên dụ dỗ các kỳ thủ chơi cờ vương vào ban đêm, trước khi biến họ thành những oan hồn.">
+    <meta property="og:type" content="book:folklore">
     <meta property="og:url" content="https://vi.komayo.page/">
-    <meta property="og:image" content="https://vi.komayo.page/img/komayo-1024x1024.webp">
-    <meta property="og:description" content="Dưới ánh trăng, yêu quái Komayō dụ dỗ người chơi ōgi, hút cạn tinh túy của họ và khiến họ trở thành yūrei, khao khát được gặp lại cô.">
-    <meta itemprop="name" content="Trò chơi shogi của quỷ">
-    <meta itemprop="description" content="Dưới ánh trăng, yêu quái Komayō dụ dỗ người chơi ōgi, hút cạn tinh túy của họ và khiến họ trở thành yūrei, khao khát được gặp lại cô.">
-    <meta itemprop="image" content="https://vi.komayo.page/img/komayo-1024x1024.webp">
+    <meta property="og:image" content="https://vi.komayo.page/img/hanoi-lake-woman-blue-kimono-full-moon-night-ink-drawing_hz7lxy_c_scale,w_1024.webp">
+    <meta property="og:image:width" content="1024">
+    <meta property="og:image:height" content="1024">
+    <meta property="og:image:alt" content="Người phụ nữ mặc kimono dưới trăng tròn, minh họa hiện đại của Nhật Bản">
+    <meta property="og:article:author" content="Cyril Veltin">
+    <meta property="og:article:published_time" content="2023-06-26">
+
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="Trò chơi shogi của quỷ">
-    <meta name="twitter:description" content="Dưới ánh trăng, yêu quái Komayō dụ dỗ người chơi ōgi, hút cạn tinh túy của họ và khiến họ trở thành yūrei, khao khát được gặp lại cô.">
-    <meta name="twitter:image" content="https://vi.komayo.page/img/komayo-1024x1024.webp">
+    <meta name="twitter:title" content="Chuyện Ma về Nàng Cờ Ma Yêu">
+    <meta name="twitter:description" content="Một câu chuyện ma Nhật Bản kể về Cờ Ma Yêu, một yōkai chuyên dụ dỗ các kỳ thủ chơi cờ vương vào ban đêm, trước khi biến họ thành những oan hồn.">
+    <meta name="twitter:image" content="https://vi.komayo.page/img/hanoi-lake-woman-blue-kimono-full-moon-night-ink-drawing_hz7lxy_c_scale,w_1024.webp">
 
-      <link rel="alternate" hreflang="bn" href="https://bn.komayo.page/">
-      <link rel="alternate" hreflang="en" href="https://en.komayo.page/">
-      <link rel="alternate" hreflang="fa" href="https://fa.komayo.page/">
-      <link rel="alternate" hreflang="fr" href="https://fr.komayo.page/">
-      <link rel="alternate" hreflang="gu" href="https://gu.komayo.page/">
-      <link rel="alternate" hreflang="hi" href="https://hi.komayo.page/">
-      <link rel="alternate" hreflang="id" href="https://id.komayo.page/">
-      <link rel="alternate" hreflang="ja" href="https://ja.komayo.page/">
-      <link rel="alternate" hreflang="jv" href="https://jv.komayo.page/">
-      <link rel="alternate" hreflang="kn" href="https://kn.komayo.page/">
-      <link rel="alternate" hreflang="ko" href="https://ko.komayo.page/">
-      <link rel="alternate" hreflang="lo" href="https://lo.komayo.page/">
-      <link rel="alternate" hreflang="ml" href="https://ml.komayo.page/">
-      <link rel="alternate" hreflang="mr" href="https://mr.komayo.page/">
-      <link rel="alternate" hreflang="my" href="https://my.komayo.page/">
-      <link rel="alternate" hreflang="or" href="https://or.komayo.page/">
-      <link rel="alternate" hreflang="pa" href="https://pa.komayo.page/">
-      <link rel="alternate" hreflang="ta" href="https://ta.komayo.page/">
-      <link rel="alternate" hreflang="te" href="https://te.komayo.page/">
-      <link rel="alternate" hreflang="th" href="https://th.komayo.page/">
-      <link rel="alternate" hreflang="ur" href="https://ur.komayo.page/">
-      <link rel="alternate" hreflang="zh" href="https://zh.komayo.page/">
+    <link rel="alternate" hreflang="bn" href="https://bn.komayo.page/">
+    <link rel="alternate" hreflang="en" href="https://en.komayo.page/">
+    <link rel="alternate" hreflang="fa" href="https://fa.komayo.page/">
+    <link rel="alternate" hreflang="fr" href="https://fr.komayo.page/">
+    <link rel="alternate" hreflang="gu" href="https://gu.komayo.page/">
+    <link rel="alternate" hreflang="hi" href="https://hi.komayo.page/">
+    <link rel="alternate" hreflang="id" href="https://id.komayo.page/">
+    <link rel="alternate" hreflang="ja" href="https://ja.komayo.page/">
+    <link rel="alternate" hreflang="jv" href="https://jv.komayo.page/">
+    <link rel="alternate" hreflang="kn" href="https://kn.komayo.page/">
+    <link rel="alternate" hreflang="ko" href="https://ko.komayo.page/">
+    <link rel="alternate" hreflang="lo" href="https://lo.komayo.page/">
+    <link rel="alternate" hreflang="ml" href="https://ml.komayo.page/">
+    <link rel="alternate" hreflang="mr" href="https://mr.komayo.page/">
+    <link rel="alternate" hreflang="my" href="https://my.komayo.page/">
+    <link rel="alternate" hreflang="or" href="https://or.komayo.page/">
+    <link rel="alternate" hreflang="pa" href="https://pa.komayo.page/">
+    <link rel="alternate" hreflang="ta" href="https://ta.komayo.page/">
+    <link rel="alternate" hreflang="te" href="https://te.komayo.page/">
+    <link rel="alternate" hreflang="th" href="https://th.komayo.page/">
+    <link rel="alternate" hreflang="ur" href="https://ur.komayo.page/">
+    <link rel="alternate" hreflang="vi" href="https://vi.komayo.page/">
+    <link rel="alternate" hreflang="zh" href="https://zh.komayo.page/">
+
     <link rel="canonical" href="https://vi.komayo.page/">
-    <link rel="icon" type="image/svg+xml" sizes="any" href="favicon.svg">
 
-    <style media="screen">
-      @media (prefers-color-scheme: light) {
-        :root {
-          --background-color: white;
-          --color: black;
-          --link-color: #6d071a;
-          --quote-color: #6d071a;
-          --shadow-color: #ccc;
-          --article-title-text-color: #000;
-          --article-title-shadow-color: #ccc;
-        }
-      }
+    <link rel="icon" type="image/png" href="/favicon/favicon-96x96.png" sizes="96x96">
+    <link rel="icon" type="image/svg+xml" href="/favicon/favicon.svg">
+    <link rel="shortcut icon" href="/favicon.ico">
+    <link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-touch-icon.png">
+    <meta name="apple-mobile-web-app-title" content="Cờ Ma Yêu">
+    <link rel="manifest" href="/site.webmanifest">
 
-      @media (prefers-color-scheme: dark) {
-        :root {
-          --background-color: black;
-          --color: white;
-          --link-color: #e37f98;
-          --quote-color: #e37f98;
-          --shadow-color: #58354d;
-          --article-title-text-color: #fff;
-          --article-title-shadow-color: #333;
-        }
-      }
-    </style>
-
-    <link rel="stylesheet" href="css/all.css" media="all">
-    <link rel="stylesheet" href="css/print.css" media="print">
-    <link rel="stylesheet" href="css/screen.css" media="screen">
+    <link href="/all.css" rel="stylesheet">
 
     <script type="application/ld+json">
       {
         "@context": "https://schema.org",
         "@type": "ShortStory",
-        "mainEntityOfPage": {
-          "@type": "WebPage",
-          "@id": "https://vi.komayo.page/"
+        "@id": "https://vi.komayo.page/",
+        "url": "https://vi.komayo.page/",
+        "@language": "vi",
+        "hasPart": [
+          {
+            "@type": "Game",
+            "headline": "Cờ vương Nhật Bản",
+            "name": "Trò chơi",
+            "@id": "https://ogi.page/",
+            "url": "https://ogi.page/"
+          }
+        ],
+        "keywords": [
+          "Cờ Ma Yêu",
+          "yōkai",
+          "yūrei",
+          "Cờ vương Nhật Bản",
+          "kaidan",
+          "văn hóa dân gian Nhật Bản",
+          "chuyện ma",
+          "trò chơi truyền thống",
+          "kimono",
+          "quyến rũ ma quái"
+        ],
+        "timeRequired": "PT4M",
+        "author": {
+          "@type": "Person",
+          "name": "Cyril Veltin"
         },
+        "copyrightHolder": {
+          "@type": "Person",
+          "name": "Cyril Veltin"
+        },
+        "copyrightYear": "2023",
+        "dateModified": "2023-06-26",
+        "datePublished": "2023-06-26",
+        "description": "Một câu chuyện ma Nhật Bản kể về Cờ Ma Yêu, một yōkai chuyên dụ dỗ các kỳ thủ chơi cờ vương vào ban đêm, trước khi biến họ thành những oan hồn.",
+        "image": {
+          "@type": "ImageObject",
+          "url": "https://vi.komayo.page/img/hanoi-lake-woman-blue-kimono-full-moon-night-ink-drawing_hz7lxy_c_scale,w_1024.webp",
+          "width": "1024",
+          "height": "1024",
+          "caption": "Người phụ nữ mặc kimono dưới trăng tròn, minh họa hiện đại của Nhật Bản"
+        },
+        "genre": [
+          "Kaidan",
+          "Văn hóa dân gian Nhật Bản",
+          "Truyện viễn tưởng"
+        ],
+        "inLanguage": "vi",
+        "headline": "Ma Nữ Cờ Vua",
+        "name": "Chuyện Ma",
         "publisher": {
           "@type": "Organization",
           "name": "Sashité",
           "url": "https://sashite.com/"
         },
-        "author": {
+        "abstract": "Một câu chuyện ma Nhật Bản về một yōkai quyến rũ người chơi cờ vương trong những ván đấu đêm khuya.",
+        "accessMode": ["textual", "visual"],
+        "accessModeSufficient": ["textual"],
+        "character": "Cờ Ma Yêu",
+        "contentLocation": "Hà Nội, Việt Nam",
+        "isAccessibleForFree": true,
+        "isFamilyFriendly": true,
+        "license": "https://creativecommons.org/licenses/by-nc-nd/4.0/",
+        "sdDatePublished": "2023-06-26",
+        "sdPublisher": {
+          "@type": "Organization",
+          "name": "Sashité"
+        },
+        "teaches": "Sự thận trọng trước điều không quen thuộc và nguy hiểm của sự cám dỗ",
+        "temporal": "Thời hiện đại",
+        "text": "Tương truyền rằng bên bờ Hồ Gươm cổ kính của Hà Nội, khi trăng rằm tháng Tám tỏa sáng trên mặt nước yên ả, một bóng hình thần bí thường xuất hiện...",
+        "typicalAgeRange": "16+",
+        "about": "Sinh vật trong văn hóa dân gian Nhật Bản gắn liền với trò chơi truyền thống",
+        "accessibilityFeature": ["alternativeText", "readingOrder", "structuralNavigation"],
+        "accessibilitySummary": "Văn bản có thể truy cập với mô tả hình ảnh và điều hướng có cấu trúc",
+        "accountablePerson": {
           "@type": "Person",
           "name": "Cyril Veltin"
         },
-        "inLanguage": "vi",
-        "headline": "Trò chơi shogi của quỷ",
-        "description": "Dưới ánh trăng, yêu quái Komayō dụ dỗ người chơi ōgi, hút cạn tinh túy của họ và khiến họ trở thành yūrei, khao khát được gặp lại cô.",
-        "image": "https://vi.komayo.page/img/komayo-1024x1024.webp",
-        "datePublished": "2023-06-26",
-        "dateModified": "2023-06-26",
-        "keywords": "câu chuyện, ma, Komayō, obake, ōgi, shōgi, yōkai, yūrei"
+        "alternativeHeadline": "Truyền thuyết về kỳ thủ cờ vương",
+        "audience": {
+          "@type": "Audience",
+          "audienceType": "Người yêu thích văn hóa dân gian Nhật Bản"
+        },
+        "educationalLevel": "Mọi lứa tuổi",
+        "educationalUse": "Giải trí và văn hóa",
+        "fileFormat": "text/html",
+        "interactivityType": "expositive",
+        "learningResourceType": "tự sự",
+        "pattern": "Chuyện ma truyền thống Nhật Bản",
+        "sourceOrganization": {
+          "@type": "Organization",
+          "name": "Sashité",
+          "url": "https://sashite.com/"
+        },
+        "spatialCoverage": {
+          "@type": "Place",
+          "name": "Hồ Gươm, Hà Nội, Việt Nam"
+        },
+        "thumbnailUrl": "https://vi.komayo.page/img/hanoi-lake-woman-blue-kimono-full-moon-night-ink-drawing_hz7lxy_c_scale,w_200.webp",
+        "version": "1.0"
       }
     </script>
   </head>
 
   <body>
-    <header>
-      <picture>
-        <source srcset="komayo-light.svg" media="(prefers-color-scheme: light)">
-        <img
-          src="komayo-dark.svg"
-          alt="Komayō"
-          title="Komayō"
-          height="22"
-          width="92">
-      </picture>
-    </header>
+    <main>
+      <article itemscope itemtype="https://schema.org/ShortStory">
+        <h1 itemprop="headline">Ma Nữ Cờ Vua</h1>
 
-    <article>
-  <h1>
-    Truyền thuyết đô thị
-  </h1>
+        <p itemprop="description">
+          Tương truyền rằng bên bờ <cite itemprop="contentLocation">Hồ Gươm</cite> cổ kính của Hà Nội,
+          khi trăng rằm tháng Tám tỏa sáng trên mặt nước yên ả,
+          một bóng hình thần bí thường xuất hiện, dụ dỗ những người lữ khách lạc đường.
+        </p>
 
-  <p>Ở vùng nông thôn xa xôi của Nhật Bản, có những câu chuyện kể về một người phụ nữ xinh đẹp đầy ám ảnh lang thang dưới ánh trăng. Một số người, bằng giọng thì thầm, dám gọi cô là Komayō. Những câu chuyện hiếm hoi về cô, được bao phủ trong bí ẩn, nói về một nhân vật duyên dáng trong bộ kimono màu xanh nửa đêm, xuất hiện trước những du khách cô đơn, như thể bị thu hút bởi sự cô đơn của họ. Một số người cho rằng cô thách thức họ chơi một trò chơi cổ xưa, với những quy tắc đã bị lãng quên theo thời gian, tương tự như shogi. Người ta nói rằng những người chấp nhận lời mời này sẽ được tìm thấy vào ngày hôm sau với một nụ cười kỳ lạ trên khuôn mặt, một bàn cờ bên cạnh, tâm trí của họ dường như bị lạc, bị một bí ẩn không thể dò được.</p>
+        <picture>
+          <img
+            itemprop="image"
+            width="1024"
+            height="1024"
+            sizes="(max-width: 1024px) 100vw, 1024px"
+            srcset="
+              img/hanoi-lake-woman-blue-kimono-full-moon-night-ink-drawing_hz7lxy_c_scale,w_200.webp 200w,
+              img/hanoi-lake-woman-blue-kimono-full-moon-night-ink-drawing_hz7lxy_c_scale,w_362.webp 362w,
+              img/hanoi-lake-woman-blue-kimono-full-moon-night-ink-drawing_hz7lxy_c_scale,w_466.webp 466w,
+              img/hanoi-lake-woman-blue-kimono-full-moon-night-ink-drawing_hz7lxy_c_scale,w_528.webp 528w,
+              img/hanoi-lake-woman-blue-kimono-full-moon-night-ink-drawing_hz7lxy_c_scale,w_602.webp 602w,
+              img/hanoi-lake-woman-blue-kimono-full-moon-night-ink-drawing_hz7lxy_c_scale,w_670.webp 670w,
+              img/hanoi-lake-woman-blue-kimono-full-moon-night-ink-drawing_hz7lxy_c_scale,w_735.webp 735w,
+              img/hanoi-lake-woman-blue-kimono-full-moon-night-ink-drawing_hz7lxy_c_scale,w_799.webp 799w,
+              img/hanoi-lake-woman-blue-kimono-full-moon-night-ink-drawing_hz7lxy_c_scale,w_853.webp 853w,
+              img/hanoi-lake-woman-blue-kimono-full-moon-night-ink-drawing_hz7lxy_c_scale,w_913.webp 913w,
+              img/hanoi-lake-woman-blue-kimono-full-moon-night-ink-drawing_hz7lxy_c_scale,w_970.webp 970w,
+              img/hanoi-lake-woman-blue-kimono-full-moon-night-ink-drawing_hz7lxy_c_scale,w_1013.webp 1013w,
+              img/hanoi-lake-woman-blue-kimono-full-moon-night-ink-drawing_hz7lxy_c_scale,w_1024.webp 1024w"
+            src="img/hanoi-lake-woman-blue-kimono-full-moon-night-ink-drawing_hz7lxy_c_scale,w_1024.webp"
+            alt="Minh họa nghệ thuật của một thiếu nữ mặc kimono xanh đêm, tóc đen dài, trong khu rừng về đêm được chiếu sáng bởi trăng tròn rực rỡ"
+          >
+        </picture>
 
+        <p>
+          Người ta kể rằng nàng <cite itemprop="character">Cờ Ma Yêu</cite> xinh đẹp và bí ẩn,
+          trong tấm kimono màu xanh đêm thẳm,
+          quyến rũ những kẻ bất hạnh bằng vẻ đẹp mê hoặc của mình,
+          rủ họ chơi một ván <a href="https://ogi.page/" itemprop="mentions" itemscope itemtype="https://schema.org/Game" rel="external"><strong itemprop="name">Cờ vương Nhật Bản</strong></a>.
+          Những ai nhận lời mời của nàng đều bị cuốn vào một mê cung huyền bí của những nước đi và chiến thuật.
+        </p>
 
-  <picture>
-    <source type="image/webp" srcset="img/komayo-512x512.webp" media="(max-width: 512px)" height="512" width="512">
-    <source type="image/webp" srcset="img/komayo-1024x1024.webp" media="(min-width: 512px)" height="1024" width="1024">
+        <p>
+          Thế nhưng,
+          khi ván cờ càng tiến sâu,
+          một cơn mệt mỏi kỳ lạ dần xâm chiếm tâm trí người chơi,
+          làm mờ đi khả năng phán đoán và thấm vào tận xương tủy,
+          dẫn dắt họ vào một giấc ngủ sâu như đáy vực.
+        </p>
 
-    <img
-      src="img/komayo-1024x1024.jpg"
-      alt="Komayō, mỉm cười, đứng cạnh một đối thủ kiệt sức đã ngủ thiếp đi bên cạnh bàn cờ ōgi."
-      title="Trò chơi ōgi mê hoặc của Komayō và vòng xoáy của giấc ngủ không thể cưỡng lại"
-      height="1024"
-      width="1024">
-  </picture>
-</article>
+        <p>
+          Chính trong cơn mê man này,
+          Cờ Ma Yêu bộc lộ chân tướng của mình.
+          Nàng hút cạn sinh khí của họ,
+          chỉ để lại một cái vỏ rỗng không của con người họ ngày trước.
+          Linh hồn của những nạn nhân bất hạnh này biến thành các oan hồn,
+          bị đày đọa phải lang thang vô định.
+          Bị ám ảnh bởi ký ức mê hoặc về Cờ Ma Yêu và day dứt bởi hy vọng hão huyền được hoàn thành ván cờ dang dở,
+          họ cứ thế phiêu diêu mãi mãi giữa cõi âm dương,
+          mắc kẹt trong một cuộc tìm kiếm vô vọng và một giấc mơ tan vỡ.
+        </p>
 
+        <p>
+          Câu chuyện này bắt nguồn từ những truyền thuyết ma quái bên bờ Hồ Gươm,
+          được truyền từ đời này sang đời khác như một lời cảnh tỉnh về sự cám dỗ của dục vọng và sự nguy hiểm của việc đuổi theo những thú vui phù phiếm.
+          Đó là một lời nhắc nhở vang vọng qua thời gian về ranh giới mong manh giữa ham muốn và hủy diệt.
+        </p>
+      </article>
+    </main>
 
+    <footer>
+      <p>
+        &copy; 2023 Cyril Veltin.
+        Bảo lưu mọi quyền.
+        <a title="Thay đổi ngôn ngữ" href="https://komayo.page/"><img
+          width="448"
+          height="416"
+          src="/icon/change-language.svg"
+          alt="Lựa chọn ngôn ngữ"
+          title="Thay đổi ngôn ngữ"
+        ></a>
+      </p>
+    </footer>
   </body>
 </html>
