feat: add breadcrumb

--- a/index.html
+++ b/index.html
@@ -179,6 +179,19 @@
   </head>
 
   <body>
+    <header>
+      <a href="https://komayo.page/"><img src="/favicon/favicon.svg" alt="Cờ Ma Yêu" width="512" height="512"></a>
+
+      <nav aria-label="breadcrumb">
+        <ol itemscope itemtype="https://schema.org/BreadcrumbList">
+          <li itemprop="itemListElement" itemscope itemtype="https://schema.org/ListItem">
+            <a itemscope itemtype="https://schema.org/ShortStory" itemprop="item" itemid="https://vi.komayo.page/" href="/"><span itemprop="name">Câu chuyện ma</span></a>
+            <meta itemprop="position" content="1">
+          </li>
+        </ol>
+      </nav>
+    </header>
+
     <main>
       <article itemscope itemtype="https://schema.org/ShortStory">
         <h1 itemprop="headline">Ma Nữ Cờ Vua</h1>
@@ -254,13 +267,6 @@
       <p>
         &copy; 2023 Cyril Veltin.
         Bảo lưu mọi quyền.
-        <a title="Thay đổi ngôn ngữ" href="https://komayo.page/"><img
-          width="448"
-          height="416"
-          src="/icon/change-language.svg"
-          alt="Lựa chọn ngôn ngữ"
-          title="Thay đổi ngôn ngữ"
-        ></a>
       </p>
     </footer>
   </body>
