fix(img): alt content

--- a/index.html
+++ b/index.html
@@ -20,17 +20,17 @@
     <meta property="og:description" content="Một câu chuyện ma Nhật Bản kể về Cờ Ma Yêu, một yōkai chuyên dụ dỗ các kỳ thủ chơi cờ vương vào ban đêm, trước khi biến họ thành những oan hồn.">
     <meta property="og:type" content="book:folklore">
     <meta property="og:url" content="https://vi.komayo.page/">
-    <meta property="og:image" content="https://vi.komayo.page/img/hanoi-lake-woman-blue-kimono-full-moon-night-ink-drawing_hz7lxy_c_scale,w_1024.webp">
+    <meta property="og:image" content="https://vi.komayo.page/img/hanoi-lake-woman-blue-kimono-full-moon-night-ink-drawing,w_1024.webp">
     <meta property="og:image:width" content="1024">
     <meta property="og:image:height" content="1024">
-    <meta property="og:image:alt" content="Người phụ nữ mặc kimono dưới trăng tròn, minh họa hiện đại của Nhật Bản">
+    <meta property="og:image:alt" content="Tranh mực phụ nữ mặc kimono xanh bên Hồ Hà Nội trong đêm trăng tròn">
     <meta property="og:article:author" content="Cyril Veltin">
     <meta property="og:article:published_time" content="2023-06-26">
 
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Chuyện Ma về Nàng Cờ Ma Yêu">
     <meta name="twitter:description" content="Một câu chuyện ma Nhật Bản kể về Cờ Ma Yêu, một yōkai chuyên dụ dỗ các kỳ thủ chơi cờ vương vào ban đêm, trước khi biến họ thành những oan hồn.">
-    <meta name="twitter:image" content="https://vi.komayo.page/img/hanoi-lake-woman-blue-kimono-full-moon-night-ink-drawing_hz7lxy_c_scale,w_1024.webp">
+    <meta name="twitter:image" content="https://vi.komayo.page/img/hanoi-lake-woman-blue-kimono-full-moon-night-ink-drawing,w_1024.webp">
 
     <link rel="alternate" hreflang="bn" href="https://bn.komayo.page/">
     <link rel="alternate" hreflang="en" href="https://en.komayo.page/">
@@ -110,10 +110,10 @@
         "description": "Một câu chuyện ma Nhật Bản kể về Cờ Ma Yêu, một yōkai chuyên dụ dỗ các kỳ thủ chơi cờ vương vào ban đêm, trước khi biến họ thành những oan hồn.",
         "image": {
           "@type": "ImageObject",
-          "url": "https://vi.komayo.page/img/hanoi-lake-woman-blue-kimono-full-moon-night-ink-drawing_hz7lxy_c_scale,w_1024.webp",
+          "url": "https://vi.komayo.page/img/hanoi-lake-woman-blue-kimono-full-moon-night-ink-drawing,w_1024.webp",
           "width": "1024",
           "height": "1024",
-          "caption": "Người phụ nữ mặc kimono dưới trăng tròn, minh họa hiện đại của Nhật Bản"
+          "caption": "Tranh mực phụ nữ mặc kimono xanh bên Hồ Hà Nội trong đêm trăng tròn"
         },
         "genre": [
           "Kaidan",
@@ -172,7 +172,7 @@
           "@type": "Place",
           "name": "Hồ Gươm, Hà Nội, Việt Nam"
         },
-        "thumbnailUrl": "https://vi.komayo.page/img/hanoi-lake-woman-blue-kimono-full-moon-night-ink-drawing_hz7lxy_c_scale,w_200.webp",
+        "thumbnailUrl": "https://vi.komayo.page/img/hanoi-lake-woman-blue-kimono-full-moon-night-ink-drawing,w_200.webp",
         "version": "1.0"
       }
     </script>
@@ -209,21 +209,21 @@
             height="1024"
             sizes="(max-width: 1024px) 100vw, 1024px"
             srcset="
-              img/hanoi-lake-woman-blue-kimono-full-moon-night-ink-drawing_hz7lxy_c_scale,w_200.webp 200w,
-              img/hanoi-lake-woman-blue-kimono-full-moon-night-ink-drawing_hz7lxy_c_scale,w_362.webp 362w,
-              img/hanoi-lake-woman-blue-kimono-full-moon-night-ink-drawing_hz7lxy_c_scale,w_466.webp 466w,
-              img/hanoi-lake-woman-blue-kimono-full-moon-night-ink-drawing_hz7lxy_c_scale,w_528.webp 528w,
-              img/hanoi-lake-woman-blue-kimono-full-moon-night-ink-drawing_hz7lxy_c_scale,w_602.webp 602w,
-              img/hanoi-lake-woman-blue-kimono-full-moon-night-ink-drawing_hz7lxy_c_scale,w_670.webp 670w,
-              img/hanoi-lake-woman-blue-kimono-full-moon-night-ink-drawing_hz7lxy_c_scale,w_735.webp 735w,
-              img/hanoi-lake-woman-blue-kimono-full-moon-night-ink-drawing_hz7lxy_c_scale,w_799.webp 799w,
-              img/hanoi-lake-woman-blue-kimono-full-moon-night-ink-drawing_hz7lxy_c_scale,w_853.webp 853w,
-              img/hanoi-lake-woman-blue-kimono-full-moon-night-ink-drawing_hz7lxy_c_scale,w_913.webp 913w,
-              img/hanoi-lake-woman-blue-kimono-full-moon-night-ink-drawing_hz7lxy_c_scale,w_970.webp 970w,
-              img/hanoi-lake-woman-blue-kimono-full-moon-night-ink-drawing_hz7lxy_c_scale,w_1013.webp 1013w,
-              img/hanoi-lake-woman-blue-kimono-full-moon-night-ink-drawing_hz7lxy_c_scale,w_1024.webp 1024w"
-            src="img/hanoi-lake-woman-blue-kimono-full-moon-night-ink-drawing_hz7lxy_c_scale,w_1024.webp"
-            alt="Minh họa nghệ thuật của một thiếu nữ mặc kimono xanh đêm, tóc đen dài, trong khu rừng về đêm được chiếu sáng bởi trăng tròn rực rỡ"
+              img/hanoi-lake-woman-blue-kimono-full-moon-night-ink-drawing,w_200.webp 200w,
+              img/hanoi-lake-woman-blue-kimono-full-moon-night-ink-drawing,w_362.webp 362w,
+              img/hanoi-lake-woman-blue-kimono-full-moon-night-ink-drawing,w_466.webp 466w,
+              img/hanoi-lake-woman-blue-kimono-full-moon-night-ink-drawing,w_528.webp 528w,
+              img/hanoi-lake-woman-blue-kimono-full-moon-night-ink-drawing,w_602.webp 602w,
+              img/hanoi-lake-woman-blue-kimono-full-moon-night-ink-drawing,w_670.webp 670w,
+              img/hanoi-lake-woman-blue-kimono-full-moon-night-ink-drawing,w_735.webp 735w,
+              img/hanoi-lake-woman-blue-kimono-full-moon-night-ink-drawing,w_799.webp 799w,
+              img/hanoi-lake-woman-blue-kimono-full-moon-night-ink-drawing,w_853.webp 853w,
+              img/hanoi-lake-woman-blue-kimono-full-moon-night-ink-drawing,w_913.webp 913w,
+              img/hanoi-lake-woman-blue-kimono-full-moon-night-ink-drawing,w_970.webp 970w,
+              img/hanoi-lake-woman-blue-kimono-full-moon-night-ink-drawing,w_1013.webp 1013w,
+              img/hanoi-lake-woman-blue-kimono-full-moon-night-ink-drawing,w_1024.webp 1024w"
+            src="img/hanoi-lake-woman-blue-kimono-full-moon-night-ink-drawing,w_1024.webp"
+            alt="Tranh mực phụ nữ mặc kimono xanh bên Hồ Hà Nội trong đêm trăng tròn"
           >
         </picture>
 
